--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ menu:
     url:               /projects/
   - title:		Categories
     url:		/categories/
+  - title:    Profile
+    url:    /about/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -300,7 +302,6 @@ collections:
   other_projects:
     permalink:         /flutter/:path/
     output:            true
-
 
 # File inclusion/exclusion
 # ----------------------------------------------------------------------------------------
