--- a/_config.yml
+++ b/_config.yml
@@ -48,13 +48,17 @@ author:
   # twitter:             <username>
 
 # Add links to the sidebar.
-menu:
-  - title:             Projects
-    url:               /projects/
-  - title:		Categories
-    url:		/categories/
-  - title:    Profile
-    url:    /about/
+# menu:
+#   - title:    Dev
+#     url:      /_featured_categories/dev/
+#   - title:    Study
+#     url:      /study/
+#   - title:		Categories
+#     url:		/categories/
+#   - title:    Profile
+#     url:    /about/
+#   - title: Tags
+#     url:    /tags/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -66,7 +70,8 @@ legal:
 copyright:             © 2021. All rights reserved.
 
 # Format of the permalinks
-permalink:             /:categories/:year-:month-:day-:title/
+permalink: none
+# permalink:             /:categories/:year-:month-:day-:title/
 
 # Pagination configuration (used by the `blog` layout)
 paginate:              10
@@ -336,6 +341,7 @@ plugins:
   - jekyll-titles-from-headings
   - jekyll-include-cache
   - jekyll-last-modified-at
+  - jemoji
 
 
 # SEO Tag
@@ -424,3 +430,9 @@ jekyll_compose:
       links:
         - title: Project Link
           url: https://example.com
+
+# jekyll-feed settings
+feed:
+  categories:
+    - devlog
+    - review
